# pyfisheye

./: LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  pages.yml
docs/source/: demonstration.rst
src/pyfisheye/: calibration.py  calibration_options.py  camera.py  nonlinear_optimisation_result.py  optimisation.py  projection.py
src/pyfisheye/internal/: projection.py
src/pyfisheye/internal/optimisation/: linear.py  nonlinear.py  optim_result.py
src/pyfisheye/internal/utils/: check_shapes.py  common.py
src/pyfisheye/optimisation/: linear.py  nonlinear.py
src/pyfisheye/scripts/: calibrate.py  demo.py
src/pyfisheye/utils/: check_shapes.py  common.py
test/: test_check_shapes_decorator.py
